--- a/savis4/Savis4/package.json
+++ b/savis4/Savis4/package.json
@@ -4,9 +4,9 @@
   "main": "main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "ng build --prod",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && ng build",
+    "build:prod": "set NODE_OPTIONS=--openssl-legacy-provider && ng build --prod",
     "watch": "ng build --watch --configuration development",
     "lint": "eslint --fix \"src/**/*.ts\"",
     "test": "jest",
@@ -22,39 +22,43 @@
     "test:ci": "start-server-and-test start:ci 'http://localhost:4200' 'npm run cypress:run'"
   },
   "build": {
-  "appId": "com.savis4.app",
-  "productName": "Savis4",
-  "directories": {
-    "output": "dist/electron",
-    "buildResources": "src/assets"  
-  },
-  "files": [
-    "main.js",
-    "package.json",
-    {
-      "from": "dist/Savis4",  
-      "to": "",
-      "filter": ["**/*"]
+    "appId": "com.savis4.app",
+    "productName": "Savis4",
+    "directories": {
+      "output": "dist/electron",
+      "buildResources": "src/assets"
     },
-    {
-      "from": "src/assets",  
-      "to": "assets",
-      "filter": ["**/*"]
+    "files": [
+      "main.js",
+      "package.json",
+      {
+        "from": "dist/Savis4",
+        "to": "",
+        "filter": [
+          "**/*"
+        ]
+      },
+      {
+        "from": "src/assets",
+        "to": "assets",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "src/assets/icons/icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "src/assets/icons/icon.icns"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "src/assets/icons/icon.png"
     }
-  ],
-  "win": {
-    "target": "nsis",
-    "icon": "src/assets/icons/icon.ico"
   },
-  "mac": {
-    "target": "dmg",
-    "icon": "src/assets/icons/icon.icns"
-  },
-  "linux": {
-    "target": "AppImage",
-    "icon": "src/assets/icons/icon.png"
-  }
-},
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
@@ -113,6 +117,7 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "isbinaryfile": "4.0.10",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.5.2",
     "jest-fetch": "^1.1.1",
