--- a/savis4/.github/workflows/docker-ci-cd.yml
+++ b/savis4/.github/workflows/docker-ci-cd.yml
@@ -7,37 +7,31 @@ on:
     branches: [ master ]
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  # Docker build and push disabled for now - uncomment when needed
+  # build-and-push:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v2
+  #   - name: Login to Docker Hub
+  #     uses: docker/login-action@v2
+  #     with:
+  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #   - name: Build and push Docker image
+  #     uses: docker/build-push-action@v4
+  #     with:
+  #       context: .
+  #       file: ./Dockerfile
+  #       push: ${{ github.event_name != 'pull_request' }}
+  #       tags: ${{ secrets.DOCKERHUB_USERNAME }}/savis4-app:${{ github.sha }}
+  #       platforms: linux/amd64,linux/arm64
 
+  # Simple job that runs for now - replace with actual deployment steps when needed
+  placeholder:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/savis4-app:${{ github.sha }}
-        platforms: linux/amd64,linux/arm64
-
-   
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    steps:
-    - name: Deploy to production
-      run: |
-        # Add your deployment steps here
-        echo "Deploying to production"
+    - name: Placeholder step
+      run: echo "Docker deployment disabled - using Firebase instead"
