--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,21 +17,21 @@ jobs:
           node-version: '20.x'
       - name: Install dependencies
         run: npm install
-        working-directory: ./Savis4
+        working-directory: ./savis4
       - name: Run Dev Server and Tests
         env:
           NODE_OPTIONS: --openssl-legacy-provider
         run: npm run test:ci
-        working-directory: ./savis4/Savis4
+        working-directory: ./savis4
       - name: Build
         env:
           NODE_OPTIONS: --openssl-legacy-provider
         run: npm run build
-        working-directory: ./Savis4
+        working-directory: ./savis4
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SAVIAS_C1F4D }}'
           channelId: live
           projectId: savias-c1f4d
-          entryPoint: './Savis4'
+          entryPoint: './savis4'
