#153 JIRA/Export Capability - Graphs Module

--- a/savis4/angular.json
+++ b/savis4/angular.json
@@ -35,6 +35,12 @@
               "src/styles.scss"
             ],
             "scripts": [],
+            "allowedCommonJsDependencies": [
+              "canvg",
+              "raf",
+              "core-js"
+            ],
+
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
           },
