--- a/savis4/package.json
+++ b/savis4/package.json
@@ -82,8 +82,12 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/chart.js": "^2.9.4",
     "dependencies": "0.0.1",
+    "docx": "^9.5.1",
     "express": "^4.19.2",
+    "file-saver": "^2.0.5",
     "firebase": "^7.0 || ^8.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jstat": "^1.9.6",
     "mathjs": "^14.4.0",
     "ng2-charts": "^2.4.3",
@@ -104,6 +108,7 @@
     "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.11.1",
     "@types/papaparse": "^5.3.14",
@@ -114,6 +119,7 @@
     "chart.js": "^2.9.4",
     "concurrently": "^8.2.2",
     "cypress": "^13.6.6",
+    "cypress-file-upload": "^5.0.8",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
     "electron-packager": "^17.1.2",
